--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
 
 <div class="portfolio-container">
   <!-- Sidebar (Hidden on Desktop) -->
-  <div class="sidebar" [class.open]="isSidebarOpen">
+  <div *ngIf="!selectedProject" class="sidebar" [class.open]="isSidebarOpen">
     <button class="close-btn" (click)="toggleSidebar()">✖</button>
     <ul>
       <li><a href="#home" (click)="toggleSidebar()">Home</a></li>
@@ -24,7 +24,7 @@
   </div>
 
   <!-- Navbar (Hidden on Mobile) -->
-  <nav class="navbar">
+  <nav *ngIf="!selectedProject" class="navbar">
     <button class="menu-btn" (click)="toggleSidebar()">☰</button>
     <div class="logo" >
       <span class="logo-text">Lopita</span>
@@ -50,7 +50,7 @@
   
 
 <!-- Home Section -->
-<section id="home" class="section about">
+<section *ngIf="!selectedProject" id="home" class="section about">
   <div class="home-container">
     
     <div class="home-content">
@@ -76,7 +76,7 @@
 </section>
 
  <!-- About Me Section -->
-<section id="about" class="section about">
+<section *ngIf="!selectedProject" id="about" class="section about">
   <div class="about-content">
     <img src="https://avatars.githubusercontent.com/u/190205469?v=4" alt="My Photo" class="profile-pic" />
     <div>
@@ -93,7 +93,7 @@
 
 
   <!-- Skills Section -->
-  <section id="skills" class="section skills">
+  <section *ngIf="!selectedProject" id="skills" class="section skills">
     <h2>Skills & Technologies</h2>
     <div class="skill-list">
       <span><i class="devicon-java-plain"></i> PowerBI</span>
@@ -195,7 +195,7 @@
   
 
   <!-- Contact Section -->
-  <section id="contact" class="section contact">
+  <section *ngIf="!selectedProject" id="contact" class="section contact">
     <h2>Contact Me</h2>
     <p>Let's connect! Reach out to me via social media or email.</p>
   
